add AddAuthhorModal component, add Delete author

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
   .list_header {
       background-color: #212529;
       color: #ffffff;
-      height: 30%;
+      height: 60px;
   }
 
   .header {
